--- a/SendIT/angular.json
+++ b/SendIT/angular.json
@@ -23,7 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+
+             "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": []
           },
@@ -72,12 +74,19 @@
           },
           "defaultConfiguration": "development"
         },
+
+
+      
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "SendIT:build"
           }
         },
+
+
+        
+        
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -90,7 +99,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": []
           }
@@ -98,4 +108,10 @@
       }
     }
   }
+
+
+ 
+
+  
 }
+
