--- a/SendIT/angular.json
+++ b/SendIT/angular.json
@@ -23,9 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.css"
 
-             "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+             
             ],
             "scripts": []
           },
@@ -99,8 +99,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+              "src/styles.css"
+              
             ],
             "scripts": []
           }
