--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,12 +13,19 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mssql": "^9.0.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13"
+    "@types/ejs": "^3.1.1",
+    "@types/express": "^4.17.13",
+    "@types/mssql": "^8.1.1",
+    "@types/nodemailer": "^6.4.6"
   }
 }
