--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mssql": "^9.0.1",
