--- a/SendIT/angular.json
+++ b/SendIT/angular.json
@@ -23,9 +23,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
-
-             
             ],
             "scripts": []
           },
@@ -99,8 +98,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
-              
             ],
             "scripts": []
           }
