--- a/SendIT/package.json
+++ b/SendIT/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store": "^14.3.1",
     "@ngrx/store-devtools": "^14.3.1",
     "json-server": "^0.17.0",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-lottie": "^9.0.1",
     "ngx-pagination": "^6.0.2",
     "ngx-spinner": "^14.0.0",
